# mini-grammar-parse

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  example.txt  mgp_example.c
.github/workflows/: build.yml
include/: mgp_internal.h  mini_grammar_parse.h
src/: mgp_error.c  mgp_grammar_rule.c  mgp_init.c  mgp_lexeme.c  mgp_parse.c  mgp_utilities.c
